--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.5.2",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.43.1",
+    "@trpc/next": "^10.43.1",
+    "@trpc/react-query": "^10.43.1",
+    "@trpc/server": "^10.43.1",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "8.0.0"
+    "react-markdown": "8.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "prisma": "^5.5.2",
     "typescript": "4.5.5"
   }
 }
